Update execution counts and SQL queries in Falcon 9 Landing Prediction Notebook for improved accuracy and clarity

--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,11 +66,11 @@
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
       "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m118.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m135.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "  Preparing metadata (setup.py) ... \u001b[?25done\n",
       "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
-      "  Building wheel for sqlalchemy (setup.py) .done\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl size=1160111 sha256=cd651984b58e5bcc8e5ea0460df3d11a70f6b06fd929eb1db37dd21222a2bea1\n",
+      "  Building wheel for sqlalchemy (setup.py) ...done\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl size=1160111 sha256=ca6d2ff6aa767bbfe99d3b95759ed35b32b856cab47b0ba756ff4b5c2855ef43\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/b3/1c/42/0e26b8d512adc6bce10ff71a05229366b4ccec641cd3b42111\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
       "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
       "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
       "Downloading sqlalchemy-2.0.43-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m74.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m115.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading prettytable-3.16.0-py3-none-any.whl (33 kB)\n",
       "Downloading sqlparse-0.5.3-py3-none-any.whl (44 kB)\n",
       "Installing collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "101"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "[101 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1143,18 +1143,69 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "(sqlite3.OperationalError) near \"LANDING_OUTCOME\": syntax error\n",
-      "[SQL: SELECT strftime('%B', \"DATE\" ) AS MONTH_NAME LANDING_OUTCOME AS LANDING_OUTCOME, BOOSTER_VERSION AS BOOSTER_VERSION, LAUNCH_SITE AS LAUNCH_SITE FROM SPACEXTBL WHERE LANDING_OUTCOME = 'Failure (drone ship)' AND \"DATE\" LIKE '%2015%']\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>MONTH_NUMBER</th>\n",
+       "            <th>MONTH_NAME</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Launch_Site</th>\n",
+       "            <th>Date</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>01</td>\n",
+       "            <td>January</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1012</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>2015-01-10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>04</td>\n",
+       "            <td>April</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "            <td>2015-04-14</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('01', 'January', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40', '2015-01-10'),\n",
+       " ('04', 'April', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40', '2015-04-14')]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT TO_CHAR(\"DATE\", 'MONTH') AS MONTH_NAME \\\n",
-    "    LANDING_OUTCOME AS LANDING_OUTCOME, \\\n",
-    "    BOOSTER_VERSION AS BOOSTER_VERSION, \\\n",
-    "    LAUNCH_SITE AS LAUNCH_SITE \\\n",
-    "    FROM SPACEXTBL WHERE LANDING_OUTCOME = 'Failure (drone ship)' AND \"DATE\" LIKE '%2015%'"
+    "%sql SELECT strftime('%m', DATE) AS MONTH_NUMBER, \\\n",
+    "    CASE strftime('%m', DATE) \\\n",
+    "        WHEN '01' THEN 'January' \\\n",
+    "        WHEN '02' THEN 'February' \\\n",
+    "        WHEN '03' THEN 'March' \\\n",
+    "        WHEN '04' THEN 'April' \\\n",
+    "        WHEN '05' THEN 'May' \\\n",
+    "        WHEN '06' THEN 'June' \\\n",
+    "        WHEN '07' THEN 'July' \\\n",
+    "        WHEN '08' THEN 'August' \\\n",
+    "        WHEN '09' THEN 'September' \\\n",
+    "        WHEN '10' THEN 'October' \\\n",
+    "        WHEN '11' THEN 'November' \\\n",
+    "        WHEN '12' THEN 'December' \\\n",
+    "    END AS MONTH_NAME,LANDING_OUTCOME, BOOSTER_VERSION, LAUNCH_SITE, DATE FROM SPACEXTBL WHERE LANDING_OUTCOME = 'Failure (drone ship)' AND DATE LIKE '%2015%'"
    ]
   },
   {
@@ -1171,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1240,7 @@
        "    <thead>\n",
        "        <tr>\n",
        "            <th>Landing_Outcome</th>\n",
-       "            <th>Count</th>\n",
+       "            <th>COUNT</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -1239,17 +1290,16 @@
        " ('Precluded (drone ship)', 1)]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT \"Landing_Outcome\", COUNT(*) AS \"Count\" \\\n",
-    "FROM SPACEXTBL \\\n",
-    "WHERE \"Date\" BETWEEN '2010-06-04' AND '2017-03-20' \\\n",
-    "GROUP BY \"Landing_Outcome\" \\\n",
-    "ORDER BY \"Count\" DESC;"
+    "%sql SELECT \"LANDING_OUTCOME\", COUNT(*) AS \"COUNT\" FROM SPACEXTBL \\\n",
+    "WHERE \"DATE\" BETWEEN '2010-06-04' AND '2017-03-20' \\\n",
+    "GROUP BY \"LANDING_OUTCOME\" \\\n",
+    "ORDER BY \"COUNT\" DESC;"
    ]
   },
   {
